[package]
name = "flopen"
version = "0.1.2"
authors = ["Andrej Shadura <andrew.shadura@collabora.co.uk>"]
description = "Reliably open and lock a file"
edition = "2018"
license = "MIT"
repository = "https://github.com/andrewshadura/rust-flopen"

[dependencies]
nix = { version = "0.27.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
