[package]
name = "flopen"
version = "0.1.2"
authors = ["Andrej Shadura <andrew.shadura@collabora.co.uk>"]
description = "Reliably open and lock a file"
documentation = "https://docs.rs/flopen"
edition = "2021"
license = "MIT"
repository = "https://github.com/andrewshadura/rust-flopen"

[dependencies]
nix = ">= 0.27, <1.0"
libc = "0.2.147"

[dev-dependencies]
tempfile = "3"
